Clean up formatting and update to conform with package conventions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,5 +23,8 @@ import(data.table)
 importFrom(TTR,WMA)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,ggplot)
+importFrom(stats,setNames)
+importFrom(stats,weighted.mean)
 importFrom(stringi,stri_match_all_regex)
 importFrom(stringi,stri_read_lines)
+importFrom(utils,head)
